--- a/internal/user/data/repository/external/mail/template/resetPassword.html
+++ b/internal/user/data/repository/external/mail/template/resetPassword.html
@@ -8,7 +8,7 @@
             <p>Hi {{ .FirstName}},</p>
             <p>
               Forgot password? Send a PATCH request to with your password and
-              passwordConfirm to {{.URL}}
+              password confirm to {{.URL}}
             </p>
             <table
               role="presentation"
